# WordsChaser

./: CMakeLists.txt  EndScreen.cpp  EndScreen.h  Game.cpp  Game.h  GameSettings.cpp  GameSettings.h  GameState.h  GameStats.h  Menu.cpp  Menu.h  README.md  Word.cpp  Word.h  main.cpp
wordBase/: cities.txt  cities_hard.txt  colors.txt  colors_hard.txt  fruits.txt  fruits_hard.txt  random_words.txt  random_words_hard.txt
